--- a/Rekool/www/index.html
+++ b/Rekool/www/index.html
@@ -7,7 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+ <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -24,11 +24,28 @@
   <body ng-app="starter">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
+      
+     <ion-content padding="true">
+        <form>
+            <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: 250px; background-color: rgb(255, 255, 255);">
+                <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+            </div>
+            <div class="spacer" style="width: 300px; height: 22px;"></div>
+            <ion-list>
+                <label class="item item-input" name="email">
+                    <span class="input-label">E-mail</span>
+                    <input type="email" placeholder="">
+                </label>
+                <label class="item item-input" name="senha">
+                    <span class="input-label">Senha</span>
+                    <input type="password" placeholder="">
+                </label>
+            </ion-list>
+            <div class="spacer" style="width: 300px; height: 21px;"></div>
+            <button class="button button-positive button-block  icon-right ion-ios7-locked">Entrar</button>
+            <a href="#/signup" class="button button-positive button-clear button-block ">Ou Cadastre-se</a>
+        </form>
+    </ion-content>
     </ion-pane>
   </body>
 </html>
