--- a/Rekool/www/pages/login.html
+++ b/Rekool/www/pages/login.html
@@ -2,7 +2,7 @@
 
 <ion-view view-title="Login" hide-nav-bar="true">
     
-        <ion-content class="padding" >
+        <ion-content class="padding" class="has-header">
 
 <div ng-controller="loginController">
     
