--- a/Rekool/www/index.html
+++ b/Rekool/www/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+&#xFEFF;<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
- <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
+    <link href="css/style-override.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -20,13 +20,13 @@
 
     <!-- your app's js -->
     <script src="js/rekool.js"></script>
-  </head>
-  <body ng-app="rekoolapp">
-<ion-nav-bar>
-  <ion-nav-back-button class="button-clear">
-    <i class="ion-arrow-left-c"></i> Voltar
-  </ion-nav-back-button>
-  </ion-nav-bar>
-     <ion-nav-view></ion-nav-view>
-  </body>
+</head>
+<body ng-app="rekoolapp">
+    <ion-nav-bar>
+        <ion-nav-back-button class="button-clear">
+            <i class="ion-arrow-left-c"></i> Voltar
+        </ion-nav-back-button>
+    </ion-nav-bar>
+    <ion-nav-view>teste</ion-nav-view>
+</body>
 </html>
