--- a/Rekool/www/pages/login.html
+++ b/Rekool/www/pages/login.html
@@ -1,5 +1,8 @@
 <ion-view >
+
+
     <ion-content class="padding" hide-nav-bar="true">
+        TESTE TESTE
         <div ng-controller="loginController">
             <div class="spacer" style="width: 300px; height: 21px;"></div>
             <form>
