Servico de alerta

--- a/Rekool/www/index.html
+++ b/Rekool/www/index.html
@@ -20,6 +20,7 @@
 
     <!-- your app's js -->
     <script src="js/rekool.js"></script>
+    <script src="js/services.js"></script>
 </head>
 <body ng-app="rekoolapp">
     <ion-nav-bar>
