--- a/Rekool/www/pages/login.html
+++ b/Rekool/www/pages/login.html
@@ -1,8 +1,5 @@
-<ion-view >
-
-
+<ion-view>
     <ion-content class="padding" hide-nav-bar="true">
-        TESTE TESTE
         <div ng-controller="loginController">
             <div class="spacer" style="width: 300px; height: 21px;"></div>
             <form>
@@ -13,15 +10,15 @@
                 <ion-list>
                     <label class="item item-input" name="email">
                         <span class="input-label">E-mail</span>
-                        <input type="email" placeholder="" maxlength="150" ng-model="Email">
+                        <input type="email" ng-model="Login.email" placeholder="" maxlength="150" >
                     </label>
                     <label class="item item-input" name="senha">
                         <span class="input-label">Senha</span>
-                        <input type="password" placeholder="" maxlength="10" ng-model="Password">
+                        <input type="password" placeholder="" ng-model="Login.senha" maxlength="10" >
                     </label>
                 </ion-list>
                 <div class="spacer" style="width: 300px; height: 21px;"></div>
-                <button class="button button-positive button-block  icon-right ion-ios7-locked">Entrar</button>
+                <button ng-click="ValidateLogin()" class="button button-positive button-block  icon-right ion-ios7-locked">Entrar</button>
                 <a href="#/cadastro" class="button button-positive button-clear button-block ">Ou Cadastre-se</a>
             </form>
         </div>
