Criada a tab Home

--- a/Rekool/www/index.html
+++ b/Rekool/www/index.html
@@ -28,6 +28,6 @@
             <i class="ion-arrow-left-c"></i> Voltar
         </ion-nav-back-button>
     </ion-nav-bar>
-    <ion-nav-view>teste</ion-nav-view>
+    <ion-nav-view ></ion-nav-view>
 </body>
 </html>
