--- a/Rekool/www/pages/tab.html
+++ b/Rekool/www/pages/tab.html
@@ -2,7 +2,7 @@
 	<ion-pane>
 		<ion-tabs class="tabs-icon-top tabs-positive">
 			
-			<!-- Home -->
+			<!-- Conta -->
 			<ion-tab title="Conta" icon="icon ion-person" href="#/tab/conta">
 				<ion-nav-view name="tab-conta"></ion-nav-view>
 			</ion-tab>
