--- a/Rekool/www/pages/login.html
+++ b/Rekool/www/pages/login.html
@@ -18,7 +18,7 @@
                     </label>
                 </ion-list>
                 <div class="spacer" style="width: 300px; height: 21px;"></div>
-                <button ng-click="ValidateLogin()" class="button button-positive button-block  icon-right ion-ios7-locked">Entrar</button>
+                <button ng-click="Logar()" class="button button-positive button-block  icon-right ion-ios7-locked">Entrar</button>
                 <a href="#/tab/home" class="button button-positive button-clear button-block ">Ou Cadastre-se</a>
             </form>
         </div>
